--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "axios": "^1.4.0",
+    "express": "^4.18.2",
+    "jquery": "^3.7.0",
     "leaflet": "^1.9.4",
     "mysql": "^2.18.1",
     "polyline-encoded": "^0.0.9"
@@ -8,7 +11,6 @@
   "description": "## Singapore Travel Guide",
   "version": "1.0.0",
   "main": "connect_db.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
